trying to use grayscale format to improve accuracy (not in a good condition)

--- a/src/logo-detector/build_logo_detector.ipynb
+++ b/src/logo-detector/build_logo_detector.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-06-09 14:26:05.148652: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-06-09 14:26:05.179039: I tensorflow/tsl/cuda/cudart_stub.cc:28] Could not find cuda drivers on your machine, GPU will not be used.\n",
+      "2023-06-09 14:26:05.179532: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-06-09 14:26:05.974799: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
    "source": [
     "import time\n",
     "import tensorflow as tf\n",
@@ -42,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,9 +64,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading model...Done! Took 17.751084804534912 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "PATH_TO_SAVED_MODEL = PATH_TO_MODEL_DIR + \"saved_model\"\n",
     "\n",
@@ -71,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,9 +101,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/ktt_2.jpg... defaultdict(<class 'str'>, {(0.05700751394033432, 0.4025473892688751, 0.2991097867488861, 0.7482930421829224): 'Chartreuse'})\n",
+      "Done\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/rfc9.jpg... defaultdict(<class 'str'>, {(0.09185022860765457, 0.23717626929283142, 0.2339421808719635, 0.873680591583252): 'Chartreuse'})\n",
+      "Done\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/mcd_1.jpg... defaultdict(<class 'str'>, {(0.09174272418022156, 0.3433310389518738, 0.4638764560222626, 0.6533715724945068): 'Chartreuse', (0.487225741147995, 0.3388737142086029, 0.57807856798172, 0.7013683319091797): 'Chartreuse'})\n",
+      "Done\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/sabana10.jpg... defaultdict(<class 'str'>, {(0.6756242513656616, 0.1792398989200592, 0.8114150762557983, 0.3966568410396576): 'Chartreuse'})\n",
+      "Done\n",
+      "Running inference for /home/irizqy/ml_ws/bangkit-ws/data/temp/sabana10.jpg... defaultdict(<class 'str'>, {(0.6756242513656616, 0.1792398989200592, 0.8114150762557983, 0.3966568410396576): 'Chartreuse'})\n",
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from PIL import Image\n",
@@ -92,7 +129,7 @@
     "import os\n",
     "\n",
     "\n",
-    "rand_im = np.random.choice(os.listdir('/home/irizqy/ml_ws/bangkit-ws/data/temp'), 1)\n",
+    "rand_im = np.random.choice(os.listdir('/home/irizqy/ml_ws/bangkit-ws/data/temp'), 5)\n",
     "# rand_im = '/home/irizqy/ml_ws/bangkit-ws/data/test/2_20230507_092258.jpg'\n",
     "\n",
     "BASED_PATH = '/home/irizqy/ml_ws/bangkit-ws/data/temp'\n",
