Almost final draft API for logo detector add request to franchise endpoint to get all logo to check similarity between source and target images

--- a/src/logo-detector/build_franchise_availability_checker.ipynb
+++ b/src/logo-detector/build_franchise_availability_checker.ipynb
@@ -19,15 +19,15 @@
    ],
    "source": [
     "import tensorflow as tf\n",
-    "# import cv2 as cv\n",
-    "# import numpy as np\n",
-    "# import utils.model_helper as mh\n",
-    "# import utils.data_utils as du\n",
+    "import cv2 as cv\n",
+    "import numpy as np\n",
+    "import utils.model_helper as mh\n",
+    "import utils.data_utils as du\n",
     "import utils.metrics as M\n",
     "import tensorflow.keras.backend as K\n",
-    "# import os\n",
-    "# import matplotlib.pyplot as plt\n",
-    "# from PIL import Image"
+    "import os\n",
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image"
    ]
   },
   {
